Fix spacing on AuthContainer

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -698,6 +698,14 @@ video {
   margin-top: 0.5rem;
 }
 
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
+}
+
 .block {
   display: block;
 }
